Fixed UI bug on iOS5 Safari

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -90,7 +90,6 @@ ul {
   text-align: center;
 }
 .box-footer button {
-  display: block;
   text-align: center;
   border-radius: 1px;
   margin: 23px auto 0;
